--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
 						</div>
 						<div class="filter-criteria">
 							<span>Storage</span>
-							<label><input type="checkbox" class="storage" value="16 GB">16 GB</label>
-							<label><input type="checkbox" class="storage" value="32 GB">32 GB</label>
+							<label><input type="checkbox" class="storage" value="16">16 GB</label>
+							<label><input type="checkbox" class="storage" value="32">32 GB</label>
 						</div>
 						<div class="filter-criteria">
 							<span>OS</span>
