--- a/index.html
+++ b/index.html
@@ -60,6 +60,6 @@
 	</div>
 
 	<script src="http://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
-	<script src="js/app.js"></script>
+	<script src="js/app.min.js"></script>
 </body>
 </html>
